--- a/.github/workflows/Runtests.yml
+++ b/.github/workflows/Runtests.yml
@@ -68,9 +68,8 @@ jobs:
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
         env:
+          JULIA_NUM_THREADS: 4
           GROUP: ${{ matrix.group }}
-        with:
-          test_args: '-t 4'
       - uses: julia-actions/julia-processcoverage@v1
         with:
           directories: src,ext
