--- a/.github/workflows/Code-Quality.yml
+++ b/.github/workflows/Code-Quality.yml
@@ -43,7 +43,7 @@ jobs:
         arch:
           - 'x64'
         group:
-          - 'Code_Quality'
+          - 'Code-Quality'
 
     steps:
       - uses: actions/checkout@v4
