--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ DiffEqCallbacks = "2 - 4"
 FastExpm = "1.1"
 JLD2 = "0.4.31 - 0.5"
 LinearAlgebra = "1"
-LinearSolve = "2.4.2 - 2"
+LinearSolve = "2.4.2 - 2, 3"
 OrdinaryDiffEqCore = "1"
 OrdinaryDiffEqLowOrderRK = "1"
 Pkg = "1"
