--- a/Project.toml
+++ b/Project.toml
@@ -35,7 +35,7 @@ LinearSolve = "2.4.2 - 2"
 OrdinaryDiffEqCore = "1"
 OrdinaryDiffEqLowOrderRK = "1"
 Pkg = "1"
-QuantumToolbox = "0.25.1 - 0.26"
+QuantumToolbox = "0.25.1 - 0.26, 0.27"
 Reexport = "1"
 SciMLBase = "2"
 SciMLOperators = "0.3"
