--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "HierarchicalEOM"
 uuid = "a62dbcb7-80f5-4d31-9a88-8b19fd92b128"
 authors = ["Yi-Te Huang"]
-version = "2.4.3"
+version = "2.4.4"
 
 [deps]
 DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
@@ -31,11 +31,11 @@ DiffEqCallbacks = "2 - 4"
 FastExpm = "1.1"
 JLD2 = "0.4.31 - 0.5"
 LinearAlgebra = "1"
-LinearSolve = "2.4.2 - 2"
+LinearSolve = "2.4.2 - 3"
 OrdinaryDiffEqCore = "1"
 OrdinaryDiffEqLowOrderRK = "1"
 Pkg = "1"
-QuantumToolbox = "0.25.1 - 0.26, 0.27"
+QuantumToolbox = "0.27"
 Reexport = "1"
 SciMLBase = "2"
 SciMLOperators = "0.3"
