--- a/Project.toml
+++ b/Project.toml
@@ -35,7 +35,7 @@ LinearSolve = "2.4.2 - 3"
 OrdinaryDiffEqCore = "1"
 OrdinaryDiffEqLowOrderRK = "1"
 Pkg = "1"
-QuantumToolbox = "0.28 - 0.29"
+QuantumToolbox = "0.28 - 0.29, 0.30"
 Reexport = "1"
 SciMLBase = "2"
 SciMLOperators = "0.3"
