--- a/Project.toml
+++ b/Project.toml
@@ -37,7 +37,7 @@ LinearSolve = "2.4.2 - 3"
 OrdinaryDiffEqCore = "1"
 OrdinaryDiffEqLowOrderRK = "1"
 Pkg = "1"
-QuantumToolbox = "0.30"
+QuantumToolbox = "0.30, 0.31"
 Reexport = "1"
 SciMLBase = "2"
 SciMLOperators = "0.3"
