--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -21,7 +21,8 @@ jobs:
       - name: "Run CompatHelper"
         run: |
           import CompatHelper;
-          CompatHelper.main(;subdirs=[""])
+          subdirs = ["", "docs", "test", "test/code-quality", "test/gpu"]
+          CompatHelper.main(;subdirs=subdirs)
         shell: julia --color=yes {0}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
