--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ authors = ["Yi-Te Huang"]
 [deps]
 DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
 FastExpm = "7868e603-8603-432e-a1a1-694bd70b01f2"
+FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 IncompleteLU = "40713840-3770-5561-ab4c-a76e7d0d7895"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
@@ -30,6 +31,7 @@ HierarchicalEOM_CUDAExt = "CUDA"
 CUDA = "5"
 DiffEqCallbacks = "2 - 4"
 FastExpm = "1.1"
+FillArrays = "1"
 IncompleteLU = "0.2"
 LinearAlgebra = "1"
 LinearSolve = "2.4.2 - 3"
@@ -37,7 +39,7 @@ OrdinaryDiffEqCore = "1"
 OrdinaryDiffEqLowOrderRK = "1"
 Pkg = "1"
 ProgressMeter = "1.11.0"
-QuantumToolbox = "0.38.1"
+QuantumToolbox = "0.39"
 Reexport = "1"
 SciMLBase = "2.105"
 SciMLOperators = "1.4"
