--- a/.typos.toml
+++ b/.typos.toml
@@ -1,9 +1,9 @@
 [default.extend-words]
-ket = "ket"
-SPRE = "SPRE"
-SPOST = "SPOST"
-SPRED = "SPRED"
-SPOSTD = "SPOSTD"
-COMM = "COMM"
-ANCOMM = "ANCOMM"
-COMMD = "COMMD"
+ket = "ket"ß
+Tspre = "Tspre"
+Tspost = "Tspost"
+TspreD = "TspreD"
+TspostD = "TspostD"
+TComm = "TComm"
+TanComm = "TanComm"
+TCommD = "TCommD"
