--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -62,6 +62,9 @@ jobs:
 
       - name: Create Branch
         run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
           BRANCH_NAME="bump-to-${{ steps.updates.outputs.new_version }}"
           git checkout -b $BRANCH_NAME
           git add Project.toml
