--- a/test/gpu/Project.toml
+++ b/test/gpu/Project.toml
@@ -1,7 +1,6 @@
 [deps]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
-LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
-QuantumToolbox = "6c2fb7c5-b903-41d2-bc5e-5a7c320b9fab"
+HierarchicalEOM = "a62dbcb7-80f5-4d31-9a88-8b19fd92b128"
 
 [compat]
 CUDA = "5"
