--- a/Project.toml
+++ b/Project.toml
@@ -39,7 +39,7 @@ OrdinaryDiffEqCore = "1, 2"
 OrdinaryDiffEqLowOrderRK = "1"
 Pkg = "1"
 ProgressMeter = "1.11.0"
-QuantumToolbox = "0.40"
+QuantumToolbox = "0.40 - 0.41"
 Reexport = "1"
 SciMLBase = "2.105"
 SciMLOperators = "1.11"
